<resources>
    <string name="app_name">Zstock</string>
    <string name="zs_hint_email">Email</string>
    <string name="zs_hint_senha">Senha</string>
    <string name="zs_hint_confirmar_senha">Confirmar senha</string>
    <string name="zs_hint_cf_cnpj">CPF/CNPJ</string>
    <string name="zs_hint_nome">Nome</string>
    <string name="zs_hint_nome_produto">Digite o nome do produto</string>
    <string name="zs_hint_preco_produto">Digite o preço do produto</string>
    <string name="zs_hint_quantidade_estoque_produto">Quantidade de produtos no estoque</string>
    <string name="zs_hint_descricao_produto">Descreva o produto</string>
    <string name="zs_hint_nome_usuario">Nome do usuário</string>
    <string name="zs_hint_email_usuario">Email do Usuário</string>
    <string name="zs_hint_data_nascimento_usuario">Data de Nascimento</string>
    <string name="zs_hint_nova_data_nascimento">Digite a nova data de nascimento</string>
    <string name="zs_hint_cpf_usuario">CPF</string>
    <string name="zs_hint_cnpj_usuario">CNPJ</string>
    <string name="zs_hint_telefone_usuario">Telefone</string>
    <string name="zs_hint_mascara_telefone">(XX)XXXX-XXXX</string>
    <string name="zs_hint_endereco_usuario">Endereço</string>
    <string name="zs_hint_razao_social">Razão Social</string>
    <string name="zs_hint_nome_fantasia">Nome fantasia</string>
    <string name="zs_hint_novo_nome">Digite novo nome</string>
    <string name="zs_hint_novo_telefone">Digite novo telefone</string>
    <string name="zs_hint_novo_email">Digite novo email</string>
    <string name="zs_hint_digite_senha">Digite sua senha</string>
    <string name="zs_hint_rua_alterar_perfil">Digite sua rua</string>
    <string name="zs_hint_complemento_alterar_perfil">Digite o complemento</string>
    <string name="zs_hint_cidade_alterar_perfil">Digite sua cidade</string>
    <string name="zs_hint_cpf_atual_alterar_perfil">Digite seu cpf atual</string>
    <string name="zs_hint_cpf_alterar_perfil">Digite novo cpf</string>
    <string name="zs_hint_valor_desconto">Valor do desconto (%)</string>
    <string name="zs_hint_novo_cnpj_alterar_perfil">Digite seu novo cnpj</string>
    <string name="zs_hint_cnpj_antigo_alterar_perfil">Digite seu cnpj antigo</string>
    <string name="zs_hint_pesquisar_produto">Digite o nome do produto</string>
    <string name="zs_texto_preco_produto">Preço:</string>
    <string name="zs_texto_quantidade_disponivel_produto">Quantidade disponível:</string>
    <string name="zs_texto_empresa_produto">Empresa:</string>
    <string name="zs_texto_descricao_produto">Descrição:</string>
    <string name="zs_texto_total_compra">TOTAL</string>
    <string name="zs_texto_nome_produto">Nome do produto</string>
    <string name="zs_texto_registro">Não é registrado?</string>
    <string name="zs_texto_registre_se"><b><u>Registre-se</u></b></string>
    <string name="zs_texto_esqueceu_senha"><u>Não sei minha senha!</u></string>
    <string name="zs_texto_cpf_visualizar_historico">CPF:</string>
    <string name="zs_texto_cnpj_visualizar_historico">CNPJ:</string>
    <string name="zs_texto_data_inicio_negociacao">Data início:</string>
    <string name="zs_texto_data_fim_negociacao">Data fim:</string>
    <string name="zs_dialogo_sim">Sim</string>
    <string name="zs_dialogo_nao">Não</string>
    <string name="zs_dialogo_titulo">Sair</string>
    <string name="zs_dialogo_mensagem_sair_conta">Tem certeza que deseja sair?</string>
    <string name="zs_dialogo_editar_produto">Editar</string>
    <string name="zs_dialogo_excluir">Excluir</string>
    <string name="zs_dialogo_voltar">Voltar</string>
    <string name="zs_dialogo_mensagem_item_compra">O que deseja fazer com o item?</string>
    <string name="zs_dialogo_remover_item">Remover item</string>
    <string name="zs_dialogo_mensagem_produto">O que deseja fazer com o produto?</string>
    <string name="zs_dialogo_titulo_produto">Produto</string>
    <string name="zs_texto_total_dialogo_compra">TOTAL:</string>
    <string name="zs_hint_quantidade_dialogo_compra">Digite a quantidade desejada</string>
    <string name="zs_btn_voltar_dialogo_compra">Voltar</string>
    <string name="zs_btn_comprar_dialogo_compra">Adicionar ao carrinho</string>
    <string name="zs_btn_confirmar_dialogo_compra">Confirmar</string>
    <string name="zs_btn_aplicar_dialogo_desconto">Aplicar desconto</string>
    <string name="zs_btn_entrar">Entrar</string>
    <string name="zs_btn_cadastrar">Cadastrar</string>
    <string name="zs_btn_alterar">Alterar</string>
    <string name="zs_btn_enviar">Enviar</string>
    <string name="zs_btn_alterar_nome">Alterar nome</string>
    <string name="zs_btn_alterar_email">Alterar email</string>
    <string name="zs_btn_alterar_telefone">Alterar telefone</string>
    <string name="zs_btn_alterar_endereco">Alterar endereço</string>
    <string name="zs_btn_alterar_cpf">Alterar cpf</string>
    <string name="zs_btn_alterar_cnpj">Alterar cnpj</string>
    <string name="zs_btn_alterar_data_nascimento">Alterar data de nascimento</string>
    <string name="zs_btn_negociar_produto">Negociar</string>
    <string name="zs_btn_comprar_produto">Comprar</string>
    <string name="zs_btn_adicionar_carrinho">Adicionar ao carrinho</string>
    <string name="zs_btn_finalizar_compra">Finalizar compra</string>
    <string name="zs_btn_finalizar_negociacao">Finalizar negociação</string>
    <string name="zs_btn_gerar_desconto_carrinho_negociacao">Gerar desconto</string>
    <string name="zs_btn_cancelar_negociacao"><u>Cancelar negociação</u></string>
    <string name="zs_sucesso_usuario_cadastrado">Usuário cadastrado com sucesso!</string>
    <string name="zs_email_enviado_sucesso">Email enviado com sucesso!</string>
    <string name="zs_nome_alterado_sucesso">Nome alterado com sucesso!</string>
    <string name="zs_email_alterado_sucesso">Email alterado com sucesso!</string>
    <string name="zs_telefone_alterado_sucesso">Telefone alterado com sucesso!</string>
    <string name="zs_endereco_alterado_sucesso">Endereço alterado com sucesso!</string>
    <string name="zs_cpf_alterado_sucesso">CPF alterado com sucesso!</string>
    <string name="zs_data_nascimento_alterado_sucesso">Data de nascimento alterada com sucesso!</string>
    <string name="zs_produto_excluido_sucesso">Produto excluído com sucesso!</string>
    <string name="zs_produto_alterado_sucesso">Produto alterado com sucesso!</string>
    <string name="zs_item_removido_sucesso">Item removido com sucesso</string>
    <string name="zs_produto_cadastrado_sucesso">Produto cadastrado com sucesso!</string>
    <string name="zs_adicionar_carrinho_compra_sucesso">Produto adicionado ao carrinho de compra!</string>
    <string name="zs_compra_realizada_sucesso">Compra realizada com sucesso!</string>
    <string name="zs_negociacao_finalizada_sucesso">Negociação finalizada com sucesso!</string>
    <string name="zs_negociacao_cancelada_sucesso">Negociacao cancelada com sucesso!</string>
    <string name="zs_excecao_campo_vazio">Preencha o campo vazio</string>
    <string name="zs_excecao_cpf_cnpj">Digite um CPF ou CNPJ válido</string>
    <string name="zs_excecao_cpf">Digite um CPF válido!</string>
    <string name="zs_excecao_cpf_cadastrado_sistema">CPF já cadastrado no sistema</string>
    <string name="zs_excecao_cpf_nao_cadastrado">Cpf não cadastrado no sistema!</string>
    <string name="zs_excecao_cnpj_cadastrado_sistema">CNPJ já cadastrado no sistema</string>
    <string name="zs_excecao_cnpj">Digite um CNPJ válido!</string>
    <string name="zs_excecao_senha_forte">Digite uma senha com no mínimo 6 caracteres</string>
    <string name="zs_excecao_email">Email digitado é inválido</string>
    <string name="zs_excecao_email_cadastrado">Esse email já esta cadastrado no sistema</string>
    <string name="zs_excecao_senhas_iguais">Digite senhas iguais</string>
    <string name="zs_excecao_conexao_falha">Verifique sua conexão com a internet</string>
    <string name="zs_excecao_usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="zs_excecao_usuario_senha">Usuario ou Senha inválido(s)!</string>
    <string name="zs_excecao_database">"Erro ao realizar operação. Verifique sua conexão com a internet ou contate o suporte."</string>
    <string name="zs_excecao_senha">Senha inválida!</string>
    <string name="zs_excecao_espaco_branco">Não é permitido deixar espaços em branco</string>
    <string name="zs_excecao_dia_invalido">Digite um dia válido!</string>
    <string name="zs_excecao_mes_invalido">Digite um mês válido!</string>
    <string name="zs_excecao_quantidade_maxima">Quantidade não disponível em estoque!</string>
    <string name="zs_excecao_quantidade_excedida">Valor de compra excedido! Tente comprar uma quantidade menor.</string>
    <string name="zs_excecao_quantidade_invalida">Quantidade inválida!</string>
    <string name="zs_excecao_carrinho_vazio">Carrinho vazio!</string>
    <string name="zs_excecao_compra_vazia">Carrinho vazio! Adicione itens ao carrinho.</string>
    <string name="zs_excecao_conexao_limite">Conexão limite atingida! Verifique sua conexão com a internet.</string>
    <string name="zs_excecao_historico_vazio">Histórico vazio</string>
    <string name="zs_excecao_produto_vazio">Sem produtos cadastrados!</string>
    <string name="zs_excecao_negociacao_andamento_vazio">Sem negociações em andamento!</string>
    <string name="zs_excecao_produto_esgotado">Produto esgotado!</string>
    <string name="zs_menu_lateral_perfil">Meu perfil</string>
    <string name="zs_menu_lateral_negociacao">Negociação</string>
    <string name="zs_menu_lateral_produtos_pessoa_fisica">Produtos</string>
    <string name="zs_menu_lateral_produtos_pessoa_juridica">Meus produtos</string>
    <string name="zs_menu_lateral_compras">Compras</string>
    <string name="zs_menu_lateral_historico_pessoa_fisica">Histórico de compras</string>
    <string name="zs_menu_lateral_historico_pessoa_juridica">Histórico de vendas</string>
    <string name="zs_menu_lateral_historico_negociacao">Histórico de negociações</string>
    <string name="zs_menu_lateral_sair">Sair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_main_pessoa_fisica">Produtos</string>
    <string name="title_activity_pessoa_fisica">Meu perfil</string>
    <string name="title_activity_perfil_pessoa_juridica">Meu perfil</string>
    <string name="title_activity_main_pessoa_juridica">Negociações</string>
    <string name="title_activity_meus_produtos">Meus produtos</string>
    <string name="title_activity_carrinho_compra">Carrinho de compra</string>
    <string name="title_activity_negociacao">Negociação</string>
    <string name="title_activity_main_historico_negociacao_pessoa_fisica">Histórico de negociações</string>
    <string name="title_activity_main_historico_negociacao_pessoa_juridica">Histórico de negociações</string>
    <string name="zs_content_description_card_item_compra">Imamgem do produto adicionado ao carrinho</string>
    <string name="zs_titulo_progress_dialog_registro">Cadastrando usuário...</string>
    <string name="zs_titulo_progress_dialog_carregar_informacoes_produto">Carregando produto...</string>
    <string name="zs_titulo_progress_dialog_cadastrando_produto">Cadastrando produto...</string>
    <string name="zs_titulo_progress_dialog_carregar_produto">Carregando produtos...</string>
    <string name="zs_titulo_progress_dialog_visualizar_historico">Carregando histórico...</string>
    <string name="zs_titulo_progress_dialog_carregar_historico_venda">Carregando histórico de vendas...</string>
</resources>