<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".perfil.gui.AlterarCpfPessoaFisicaActivity">

    <EditText
        android:id="@+id/edtCpfAtualAlterarPessoaFisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_cpf_cnpj"
        android:drawableStart="@drawable/ic_cpf_cnpj"
        android:drawablePadding="@dimen/drawable_padding"
        android:padding="10dp"
        android:inputType="number"
        android:hint="@string/zs_hint_cpf_atual_alterar_perfil"/>

    <EditText
        android:id="@+id/edtCpfNovoAlterarPessoaFisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_cpf_cnpj"
        android:drawableStart="@drawable/ic_cpf_cnpj"
        android:drawablePadding="@dimen/drawable_padding"
        android:inputType="number"
        android:hint="@string/zs_hint_cpf_alterar_perfil"/>

    <Button
        android:id="@+id/btnAlterarCpfPessoaFisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zs_btn_alterar_cpf"/>

</LinearLayout>