<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.zstok.perfil.PerfilPessoaFisicaActivity"
        tools:showIn="@layout/app_bar_perfil_pessoa_fisica">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp" >

           <Button
                android:id="@+id/btnAlterarImagemPerfilPessoaFisica"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/imgPerfilPessoaFisica"
                android:layout_alignEnd="@+id/imgPerfilPessoaFisica"
                android:layout_alignRight="@+id/imgPerfilPessoaFisica"
                android:background="@drawable/ic_editar" />

            <android.support.v4.widget.CircleImageView
                android:id="@+id/imgPerfilPessoaFisica"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_perfil"
                android:scaleType="centerCrop"
                android:layout_alignParentLeft="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtNomeFantasiaPerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_nome_fantasia"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtRazaoSocialPerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_razao_social"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtEmailPerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_email"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtCpfPerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_cnpj_usuario"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtTelefonePerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_telefone_usuario"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edtEnderecoPerfilJuridico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zs_hint_endereco_usuario"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/ic_setinha"
                android:drawableEnd="@drawable/ic_setinha"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>