<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_carrinho_compra"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/goiaba"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvTotalCaixaDialogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/preto"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTotalDescontoCaixaDialogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/preto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtDescontoCaixaDialogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/zs_hint_valor_desconto"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:inputType="numberDecimal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btnGerarDescontoCaixaDialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_left"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:text="@string/zs_btn_aplicar_dialogo_desconto"
            android:background="@drawable/borda_goiaba"
            android:textColor="@color/jabuticaba" />

    </RelativeLayout>
</LinearLayout>